# BareMetalSched

./: CMakeLists.txt  README.md
cmake/: toolchain.cmake
hal/arm/: CMakeLists.txt  exception.c  sys.c
hal/arm/include/: reg.h  sys.h
kernel/: CMakeLists.txt  context_switch.c  kernel.c  thread.c
kernel/asm/: CMakeLists.txt  startup.S  wrapper.S
kernel/include/: CMakeLists.txt  thread.h
src/: CMakeLists.txt  main.c
